--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <div class="header_sticky">
     <div id="header">
         <div class="header_logo">
-            <a href="#"><img src="/img/Header_Logo_TrenZ.png" alt="logo" class="logo_img"></a>
+            <a href="/"><img src="/img/Header_Logo_TrenZ.png" alt="logo" class="logo_img"></a>
         </div>
         <div class="header_search">
                 <input class="header_search_input" type="text" name="search" placeholder="Tìm kiếm...">
@@ -15,10 +15,10 @@
     <!-- NAVBAR SESSION -->
     <div id="navbar">
         <ul class="navbar_menu_list">
-            <li><a style="color: var(--primary-color)" href="#">SALE</a></li>
-            <li><a href="#">Nam</a></li>
-            <li><a href="#">Nữ</a></li>
-            <li><a href="#">Trẻ em</a></li>
+            <li><a style="color: var(--primary-color)" href="/">SALE</a></li>
+            <li><a href="/product">Nam</a></li>
+            <li><a href="/search">Nữ</a></li>
+            <li><a href="/news">Trẻ em</a></li>
             <li><a href="#">Về TrenZ</a></li>
         </ul>
         <div class="navbar_user">
