--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/app.css/app.css">
     <link rel="stylesheet" href="/css/app.css/header.css">
     <link rel="stylesheet" href="/css/app.css/footer.css">
+    <link rel="stylesheet" href="/css/app.css/detailProduct.css">
+
 
     <link rel="stylesheet" href="/icon/fontawesome-free-6.4.2-web/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
