--- a/src/resources/views/product.hbs
+++ b/src/resources/views/product.hbs
@@ -1,23 +1,4 @@
-{{!-- 
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TrenZ_Header</title>
-    <link rel="stylesheet" href="/assets/css/base.css">
-    <link rel="stylesheet" href="/assets/css/modules/menproduct_page.css">
-    <link rel="stylesheet" href="/assets/css/modules/header_footer.css">
-    <link rel="stylesheet" href="/assets/css/icon/fontawesome-free-6.4.2-web/css/all.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;400;500&family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <!-- BODY SESSION -->
-    <div id="men_items">
+<div id="men_items">
         <div class="men_items">
             <h2>Trang chủ</h2>
             <h1>Tất cả sản phẩm cho nam giới</h1>
@@ -93,12 +74,12 @@
                     <div class="men_product_content row">   
                         {{#each products}} 
 
-                         <div= class="men_product_content_items">
-                            <a href="/home/{{this.id}}">
+                         <div class="men_product_content_items">
+                            <a href="/product/{{this.id}}">
                                 <img class="detail_product" src="{{this.img}}" alt="{{this.name}}"  >
                             </a>
 
-                            <a href="/home/{{this.id}}">
+                            <a href="/product/{{this.id}}">
                                 <p class="description">{{this.name}}</p>                              
                             </a>
                             <p class="price">{{this.price}}đ</p>
@@ -126,7 +107,3 @@
             
         </div>
     </section>
-
-</body>
-</html> --}}
-<h1>HOME PAGE</h1>
