--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -15,11 +15,11 @@
     <!-- NAVBAR SESSION -->
     <div id="navbar">
         <ul class="navbar_menu_list">
-            <li><a style="color: var(--primary-color)" href="/">SALE</a></li>
+            <li><a href="/home">Trang chủ</a></li>
             <li><a href="/product">Nam</a></li>
-            <li><a href="/search">Nữ</a></li>
-            <li><a href="/news">Trẻ em</a></li>
-            <li><a href="#">Về TrenZ</a></li>
+            <li><a href="/womenProduct">Nữ</a></li>
+            <li><a href="/childrenProduct">Trẻ em</a></li>
+            <li><a href="/about">Về TrenZ</a></li>
         </ul>
         <div class="navbar_user">
             <!-- <a href=""><i class="navbar_btn fas fa-user"></i></a>
