--- a/src/public/css/app.css/base.css
+++ b/src/public/css/app.css/base.css
@@ -1,5 +1,8 @@
 * {
-    box-sizing: inherit;
+    box-sizing: border-box;
+    outline: none;
+    margin: 0;
+    padding: 0;
 }
 :root {
     --white-color: #fff;
