--- a/src/public/css/app.css/header.css
+++ b/src/public/css/app.css/header.css
@@ -1,9 +1,22 @@
-/*HEADER*/
-.header_sticky{
-    position: sticky;
-    top:0;
+.header_sticky {
+    width: 100%;
     background-color: var(--white-color);
     z-index: 1;
+}   
+.header_sticky.active {
+    position: fixed;
+    top:0;
+    animation: slideIn 500ms ease forwards;
+} 
+
+@keyframes slideIn {
+    0% {
+        transform: translateY(-100%);
+    }
+    100% {
+        transform: translateY(0);
+    }
+    
 }
 #header{
     display: flex;
@@ -57,6 +70,9 @@
     padding: 0;
     margin-left: 1.6rem;
     font-family: 'Kanit', sans-serif;
+}
+.navbar_menu_list li .active {
+    border: 1px solid var(--primary-color);
 }
 .navbar_menu_list > li{
     display: inline-block;
