--- a/src/public/css/app.css/product.css
+++ b/src/public/css/app.css/product.css
@@ -1,10 +1,3 @@
-
-* {
-    box-sizing: border-box;
-    outline: none;
-    margin: 0;
-    padding: 0;
-}
 .body {
     font-family: 'Lato', sans-serif;
     font-weight: 600;
@@ -15,18 +8,20 @@
 }
 .row {
     display: flex;
-    flex-wrap: wrap;;
+    /* flex-wrap: wrap; */
+    justify-content: space-around;
+    
 }
-.men_items {
+.product_title {
     margin-top: 50px;
     text-align: center;
 }
-.men_items > h2 {
+.product_title > h2 {
     font-size: 2.2rem;
     font-family: 'Kanit', sans-serif;
     font-weight: 400;    
 }
-.men_items > h1 {
+.product_title > h1 {
     margin-top: 20px;
     font-size: 2.8rem;
     font-family: 'Kanit', sans-serif;
@@ -39,14 +34,14 @@
     padding: 30px 30px;
 }
 .filter_left {
-    width: 20%;
+    width: 30%;
 }
 .filter_right{
-    width: 80%;
-}
+    width: 70%;
+} 
 .filter_right_items {
-    flex: 1;
     padding: 0 12px;
+
 }
 .filter_right_items label {
     width: 25%;
@@ -68,33 +63,48 @@
     cursor: pointer;
     margin-left: 850px;
 }
-.men_product_content {
+.products_content {
+    display: flex;
+    flex-wrap: wrap;
     margin-top: 20px;
     justify-content: space-between;
 }
-.men_product_content_items {
+.products_content_items {
     width: calc(25% - 12px);
-    text-align: center;
     padding: 12px 0;
     margin-left: 12px;
     text-align: left;
-    text-decoration: none;
 } 
-.men_product_content_items .description {
+.products_content_list {
+    padding: 1rem;
+    border-radius: 10px;
+}
+.products_content_items .products_content_list:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.products_content_items a {
+    text-decoration: none;
+}
+.products_content_items .description {
     font-size: 1.5rem;
     font-weight: 450;
     font-family: 'Lato', sans-serif;
     margin-top: 6px;
     color: #333333;
 }
-.men_product_content_items .price{
+.products_content_items .description:hover {
+   text-decoration: underline;
+}
+.products_content_items .price{
     font-family: 'Lato', sans-serif;
     margin-top: 6px;
     color: #333333;
     font-size: 1.5rem;
     font-weight: bold;
+
 }
-.men_product_content_items img {
+.products_content_items img {
     width: 97%;
     border-radius: 10px;
 }
@@ -108,17 +118,18 @@
     margin-top: 10px;
 }
 .filter-section h3 {
-    font-size: 15px;
+    font-size: 2rem;
     font-weight: 600;
 }
 
 .container1 {
+    width: 500px;
     display: block;
     position: relative;
     padding-left: 27px;
     margin-top: 10px;
     cursor: pointer;
-    font-size: 12px;
+    font-size: 1.6rem;
     font-weight: 400;
     -webkit-user-select: none;
     -moz-user-select: none;
