--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEST</title>
+    <title>TRENZ OFFICIAL</title>
     <link rel="stylesheet" href="/css/app.css/base.css">
-    <link rel="stylesheet" href="/css/app.css/app.css">
+    <link rel="stylesheet" href="/css/app.css/product.css">
     <link rel="stylesheet" href="/css/app.css/header.css">
     <link rel="stylesheet" href="/css/app.css/footer.css">
+    <link rel="stylesheet" href="/css/app.css/home.css">
     <link rel="stylesheet" href="/css/app.css/detailProduct.css">
-
+    <link rel="stylesheet" href="/css/app.css/about.css">
+    <link rel="shortcut icon" href="./img/Logo_TrenZ.png" type="image/x-icon">
 
     <link rel="stylesheet" href="/icon/fontawesome-free-6.4.2-web/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +28,7 @@
         {{> footer}}
     </div>
 
-
+    <script src="/js/header.js"></script>
 </body>
 
 </html>
