--- a/src/resources/views/product/product.hbs
+++ b/src/resources/views/product/product.hbs
@@ -1,10 +1,9 @@
-<div id="men_items">
-        <div class="men_items">
+<div id="products_items">
+        <div class="product_title">
             <h2>Trang chủ</h2>
-            <h1>Tất cả sản phẩm cho nam giới</h1>
+            <h1>Tất cả sản phẩm cho Nam giới</h1>
         </div>
     </div>
-
     <!-- filter and category-->
     <section class="filter">
         <div class="container">
@@ -60,7 +59,8 @@
                         </label>
                     </div>
                 </div>
-                <div class="filter_right row">
+
+                <div class="filter_right">
                     <div class="filter_right_items">
                         <label for="category">Sắp xếp theo</label>
                         <select id="category">
@@ -71,11 +71,11 @@
                         </select>     
                     </div>
 
-                    <div class="men_product_content row">   
-                        {{#each products}} 
-
-                         <div class="men_product_content_items">
-                            <a href="/product/{{this.id}}">
+                    <div class="products_content row">   
+                    {{#each products}}
+                         <div class="products_content_items">
+                            <div class="products_content_list">
+                                <a href="/product/{{this.id}}">
                                 <img class="detail_product" src="{{this.img}}" alt="{{this.name}}"  >
                             </a>
 
@@ -83,6 +83,7 @@
                                 <p class="description">{{this.name}}</p>                              
                             </a>
                             <p class="price">{{this.price}}đ</p>
+                            </div>                         
                         </div>
                         {{/each}}
                     </div>
