--- a/src/resources/views/product/childrenProduct.hbs
+++ b/src/resources/views/product/childrenProduct.hbs
@@ -75,11 +75,11 @@
                     {{#each products}}
                           <div class="products_content_items">
                             <div class="products_content_list">
-                                <a href="/product/{{this.id}}">
+                                <a href="/childrenProduct/{{this.id}}">
                                 <img class="detail_product" src="{{this.img}}" alt="{{this.name}}"  >
                             </a>
 
-                            <a href="/product/{{this.id}}">
+                            <a href="/childrenProduct/{{this.id}}">
                                 <p class="description">{{this.name}}</p>                              
                             </a>
                             <p class="price">{{this.price}}đ</p>
