--- a/src/public/css/app.css/header.css
+++ b/src/public/css/app.css/header.css
@@ -2,6 +2,7 @@
     width: 100%;
     background-color: var(--white-color);
     z-index: 1;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }   
 .header_sticky.active {
     position: fixed;
@@ -35,6 +36,7 @@
 .header_search_input{
     width: 500px;
     height: 40px;
+    font-size: 16px;
     border-radius: 5px;
     border: 1px solid #ccc;
     padding-left: 10px;
@@ -63,7 +65,8 @@
     /* margin-bottom: 2rem;
     margin-right: 4rem;
     margin-left: 2rem; */
-    margin: 1.5rem 3rem;
+    /* margin: 1.5rem 3rem; */
+    margin: 1.5rem 3rem 0 3rem;
     padding-bottom: 1.5rem;
 }
 .navbar_menu_list{
@@ -124,8 +127,22 @@
 }
 .navbar_btn{
     color: var(--black-color);
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 a i:hover{
     color: var(--primary-color);
+}
+.navbar_cart a {
+    position: relative;
+    text-decoration: none;
+}
+.navbar_cart a > p {
+    position: absolute;
+    left : 15px;
+    bottom: 15px;
+    padding: 0.5rem;
+    background-color: red;
+    color: var(--white-color);
+    border-radius: 50%;
+    font-size: 1.8rem;
 }
