--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -12,10 +12,10 @@
         {{#each products}}
         <div class="home_product">
             <div class="home_product_items">
-                <a href="/home/{{this.id}}">
+                <a href="/{{this.id}}">
                 <img class="detail_product" src="{{this.img}}" alt="{{this.name}}">
             </a>
-            <a href="/home/{{this.id}}">
+            <a href="/{{this.id}}">
                 <p class="description">{{this.name}}</p>
             </a>
             <p class="price">{{this.price}}đ</p>
