--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/css/app.css/home.css">
     <link rel="stylesheet" href="/css/app.css/detailProduct.css">
     <link rel="stylesheet" href="/css/app.css/about.css">
+    <link rel="stylesheet" href="/css/app.css/search.css">
+    <link rel="stylesheet" href="/css/app.css/cart.css">
     <link rel="shortcut icon" href="./img/Logo_TrenZ.png" type="image/x-icon">
 
     <link rel="stylesheet" href="/icon/fontawesome-free-6.4.2-web/css/all.css">
