--- a/src/resources/views/cart.hbs
+++ b/src/resources/views/cart.hbs
@@ -2,7 +2,7 @@
             <div class="cart_items">
                 <div class="cart_list">
                     <h4>GIỎ HÀNG </h4>
-                    <p class="number_of_product"></p>
+                    <p class="number_of_product">({{product.length}}) sản phẩm</p>
                     <div class="cart_list_title">
                         <table>
                             <tr>
@@ -62,7 +62,7 @@
 </div>
 
 <script>
-    const numberOfProduct = document.querySelectorAll('table tr.products_cart');
+    /*const numberOfProduct = document.querySelectorAll('table tr.products_cart');
     const number_of_product = document.querySelector('.number_of_product');
-    number_of_product.innerHTML = "(" + numberOfProduct.length + ")" + " sản phẩm";
+    number_of_product.innerHTML = "(" + numberOfProduct.length + ")" + " sản phẩm";*/
 </script>
