--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -4,12 +4,13 @@
             <a href="/"><img src="/img/Header_Logo_TrenZ.png" alt="logo" class="logo_img"></a>
         </div>
         <div class="header_search">
-            <form method="GET" action="./search" >
+            <form method="GET" action="./search">
                 <input class="header_search_input" type="text" name="keyword" placeholder="Tìm kiếm...">
-                <button class="header_search_btn" type="submit"><i style="color:var(--white-color)" class="fas fa-search"></i></button>
+                <button class="header_search_btn" type="submit"><i style="color:var(--white-color)"
+                        class="fas fa-search"></i></button>
             </form>
-                
-                
+
+
         </div>
         <div class="header_hotline">
             <i class="fa-solid fa-phone-volume"></i>
@@ -28,18 +29,26 @@
         <div class="navbar_user">
             <a href=""><i class="navbar_btn fas fa-user"></i></a>
             <p class="login_user">khoalee</p>
-            {{!-- <p class="navbar_login_signup"> 
+            {{!-- <p class="navbar_login_signup">
                 <a class="navbar_login" href="">Đăng nhập</a>
                 <a class="navbar_signup" href="">Đăng ký</a>
             </p> --}}
         </div>
         <div class="navbar_cart">
             <a href="/cart/checkout"><i class="navbar_btn fas fa-shopping-cart"></i>
-            {{!-- <p class="cart_figure">5</p> --}}
+                <p>{{product.length}}</p>
+                
             </a>
         </div>
     </div>
 </div>
 <script>
-    
+    //take information {{product.length}} from /cart/checkout and show it on navbar with class navbar_cart p
+    /*const cart_length = document.querySelector('.navbar_cart p');
+    if (cart_length.innerHTML == 0) {
+        cart_length.innerHTML = "0";
+    } else {
+        cart_length.style.display = "block";
+    }*
+
 </script>
