--- a/src/resources/views/product/detailProduct.hbs
+++ b/src/resources/views/product/detailProduct.hbs
@@ -31,10 +31,10 @@
                 <div class="product-info-detail-size product-line">
                     <div class="product-info-detail-title ">Kích thước:</div>
                     <div class="product-info-detail-size-list">
-                        <div class="product-info-detail-size-list-item">S</div>
-                        <div class="product-info-detail-size-list-item">M</div>
-                        <div class="product-info-detail-size-list-item">L</div>
-                        <div class="product-info-detail-size-list-item">XL</div>
+                        <a class="product-info-detail-size-list-item" data-name="S">S</a>
+                        <a class="product-info-detail-size-list-item" data-name="M">M</a>
+                        <a class="product-info-detail-size-list-item" data-name="L">L</a>
+                        <a class="product-info-detail-size-list-item" data-name="XL">XL</a>
                     </div>
                 </div>
                 <!-- Chọn số lượng -->
@@ -46,7 +46,11 @@
                         <button class="product-info-detail-quantity-number-button">+</button>
                     </div>
     
-                    <p class="product-info-detail-quantity-avai">{{this.amount}} sản phẩm có sẵn</p>
+                    <p class="product-info-detail-quantity-avai">
+                        <span>{{this.amount}}</span>
+                        <span>{{this.size}}</span>
+                        <span class="show_quantity"></span>
+                         sản phẩm có sẵn</p>
                 </div>
                 <!-- Thanh toán -->
                 <div class="product-info-detail-button product-line">
@@ -84,10 +88,7 @@
         <div class="img-side">
             <i class="img-side-btn fa-solid fa-chevron-left"></i>
             <div class="img-side-item">
-                <img src="" alt="" class="img-side-item-img">
-                <img src="/assets/css/images/Detail_Product/side1.jpg" alt="" class="img-side-item-img">
-                <img src="/assets/css/images/Detail_Product/side2.jpg" alt="" class="img-side-item-img">
-                <img src="/assets/css/images/Detail_Product/side3.jpg" alt="" class="img-side-item-img">
+                <span>{{this.sub_img}}</span>
             </div>
             <i class="img-side-btn fa-solid fa-chevron-right"></i>
         </div>
@@ -207,11 +208,59 @@
         {{/each}}
     </div>
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
+      /*  document.addEventListener('DOMContentLoaded', function () {
             var myLink = document.getElementById('.product-info-detail-button a');
             myLink.addEventListener('click', function (event) {
                 event.preventDefault();
             });
-        });
+        });*/
 
+        var sizeElements = document.querySelectorAll('.product-info-detail-size-list-item');
+        const total_amount = document.querySelector('.product-info-detail-quantity-avai span');
+        const amount = document.querySelector('.product-info-detail-quantity-avai span:nth-child(2)');
+        const list_quantity = JSON.parse(amount.innerHTML)
+
+        const show_quantity = document.querySelector('.show_quantity');
+
+        amount.classList.add('style');
+        amount.style.display = 'none';
+        
+        sizeElements.forEach(function(element) {
+        var dataSizeName = element.getAttribute('data-name');
+        element.addEventListener('click', function() {
+            total_amount.classList.add('style');
+            total_amount.style.display = 'none';
+
+            show_quantity.innerHTML = list_quantity[dataSizeName];
+
+        });
+        });
+        
+        const img_urls = document.querySelector('.img-side-item span');
+        img_urls.classList.add('style');
+        img_urls.style.display = 'none';
+
+        //list_imgs = JSON.parse(img_urls.textContent.split(','));
+        //list_imgs = JSON.parse(img_urls.textContent);
+
+        sub_imgs = img_urls.textContent.replace(/'/g, '"');
+        list_imgs = JSON.parse(sub_imgs);
+        console.log(list_imgs);
+        
+        const product_info_image_img = document.querySelector('.product-info-image-img');
+        for(let i = 0; i < list_imgs.length; i++){
+            var img = document.querySelector('.img-side-item')
+            var img_item = document.createElement('img');
+            img_item.src = list_imgs[i];
+            img_item.classList.add('img-side-item-img');
+            img.appendChild(img_item);
+                   
+            img.onclick = function (e) {
+            product_info_image_img.src = e.target.src;
+            };
+        }
+
+
+    
+    
     </script>
